--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@silevis/reactgrid",
+  "name": "@loydvizk/reactgrid",
   "description": "Add spreadsheet-like behavior to your React app.",
-  "version": "4.1.8",
+  "version": "4.1.9",
   "homepage": "https://reactgrid.com",
   "license": "MIT",
-  "author": "Silevis Software",
+  "author": "Forked from Silevis Software",
   "repository": {
     "type": "git",
-    "url": "https://github.com/silevis/reactgrid.git"
+    "url": "https://github.com/loydvizk/reactgrid"
   },
   "keywords": [
     "react",
