--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@loydvizk/reactgrid",
+  "name": "@loydvizk/reactgrid-multiline",
   "description": "Add spreadsheet-like behavior to your React app.",
-  "version": "4.1.9",
+  "version": "1.0.0",
   "homepage": "https://reactgrid.com",
   "license": "MIT",
   "author": "Forked from Silevis Software",
@@ -77,11 +77,6 @@
     "cy:columnAndRowSelections": "npx cypress run --headless --quiet --browser firefox -s 'cypress/integration/tests/columnAndRowSelections/*'",
     "cy:columnAndRowSelectionsWithSticky": "npx cypress run --headless --quiet --browser firefox -s 'cypress/integration/tests/columnAndRowSelectionsWithSticky/*'",
     "remove-suffix": "cross-env SUFFIX=rc node ./node_modules/npm-version-suffix/run-remove-suffix.js"
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "if git-branch-is develop; then npx run-s eslint run:all:tests; fi"
-    }
   },
   "browserslist": [
     ">0.2%",
